{
  "version": 4,
  "terraform_version": "1.3.7",
  "serial": 18,
  "lineage": "704adde2-b23d-8ddc-3360-4541f8b29c80",
  "resources": [
    {
      "mode": "managed",
      "type": "google_compute_address",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address": "34.133.107.221",
            "address_type": "EXTERNAL",
            "creation_timestamp": "2023-02-21T06:16:36.797-08:00",
            "id": "projects/zahra-project41853/regions/us-central1/addresses/nat",
            "name": "nat",
            "network_tier": "PREMIUM",
            "prefix_length": 0,
            "project": "zahra-project41853",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/regions/us-central1/addresses/nat"
          },
          "dependencies": [
            "google_project_service.compute"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "80"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-21T06:17:18.846-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zahra-project41853/global/firewalls/http",
            "log_config": [],
            "name": "http",
            "network": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/networks/myvpc",
            "priority": 1000,
            "project": "zahra-project41853",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/firewalls/http",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_firewall",
      "name": "ssh",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "allow": [
              {
                "ports": [
                  "22"
                ],
                "protocol": "tcp"
              }
            ],
            "creation_timestamp": "2023-02-21T06:17:18.850-08:00",
            "deny": [],
            "description": "",
            "destination_ranges": [],
            "direction": "INGRESS",
            "disabled": false,
            "enable_logging": null,
            "id": "projects/zahra-project41853/global/firewalls/ssh",
            "log_config": [],
            "name": "ssh",
            "network": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/networks/myvpc",
            "priority": 1000,
            "project": "zahra-project41853",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/firewalls/ssh",
            "source_ranges": [
              "0.0.0.0/0"
            ],
            "source_service_accounts": null,
            "source_tags": null,
            "target_service_accounts": null,
            "target_tags": null,
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "google_compute_network.myvpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_instance",
      "name": "private-instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 6,
          "attributes": {
            "boot_disk": [
              {
                "auto_delete": true,
                "device_name": "persistent-disk-0",
                "initialize_params": [
                  {
                    "image": "https://www.googleapis.com/compute/v1/projects/debian-cloud/global/images/debian-11-bullseye-v20230206",
                    "labels": {
                      "my_label": "value"
                    },
                    "size": 10,
                    "type": "pd-standard"
                  }
                ],
                "mode": "READ_WRITE",
                "source": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/zones/us-central1-a/disks/private-instance"
              }
            ],
            "can_ip_forward": false,
            "cpu_platform": "Intel Broadwell",
            "current_status": "RUNNING",
            "deletion_protection": false,
            "enable_display": false,
            "id": "projects/zahra-project41853/zones/us-central1-a/instances/private-instance",
            "instance_id": "850404013116058771",
            "label_fingerprint": "42WmSpB8rSM=",
            "machine_type": "e2-small",
            "metadata_fingerprint": "er65H3SL9YM=",
            "name": "private-instance",
            "network_interface": [
              {
                "name": "nic0",
                "network": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/networks/myvpc",
                "network_ip": "10.1.0.2",
                "queue_count": 0,
                "stack_type": "IPV4_ONLY",
                "subnetwork": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/regions/us-central1/subnetworks/management-subnet",
                "subnetwork_project": "zahra-project41853"
              }
            ],
            "project": "zahra-project41853",
            "scheduling": [
              {
                "automatic_restart": true,
                "min_node_cpus": 0,
                "on_host_maintenance": "MIGRATE",
                "preemptible": false,
                "provisioning_model": "STANDARD"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/zones/us-central1-a/instances/private-instance",
            "shielded_instance_config": [
              {
                "enable_integrity_monitoring": true,
                "enable_secure_boot": false,
                "enable_vtpm": true
              }
            ],
            "tags_fingerprint": "42WmSpB8rSM=",
            "zone": "us-central1-a"
          },
          "dependencies": [
            "google_compute_network.myvpc",
            "google_compute_subnetwork.management-subnet",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_network",
      "name": "myvpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "auto_create_subnetworks": false,
            "delete_default_routes_on_create": false,
            "enable_ula_internal_ipv6": false,
            "id": "projects/zahra-project41853/global/networks/myvpc",
            "mtu": 1460,
            "name": "myvpc",
            "project": "zahra-project41853",
            "routing_mode": "REGIONAL",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/networks/myvpc"
          },
          "dependencies": [
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router",
      "name": "router",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-21T06:17:18.893-08:00",
            "encrypted_interconnect_router": false,
            "id": "projects/zahra-project41853/regions/us-central1/routers/router",
            "name": "router",
            "network": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/networks/myvpc",
            "project": "zahra-project41853",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/regions/us-central1/routers/router"
          },
          "dependencies": [
            "google_compute_network.myvpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_router_nat",
      "name": "nat",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "enable_dynamic_port_allocation": false,
            "enable_endpoint_independent_mapping": true,
            "icmp_idle_timeout_sec": 30,
            "id": "zahra-project41853/us-central1/router/nat",
            "max_ports_per_vm": 0,
            "min_ports_per_vm": 0,
            "name": "nat",
            "nat_ip_allocate_option": "MANUAL_ONLY",
            "nat_ips": [
              "https://www.googleapis.com/compute/v1/projects/zahra-project41853/regions/us-central1/addresses/nat"
            ],
            "project": "zahra-project41853",
            "region": "us-central1",
            "router": "router",
            "source_subnetwork_ip_ranges_to_nat": "LIST_OF_SUBNETWORKS",
            "subnetwork": [
              {
                "name": "projects/zahra-project41853/regions/us-central1/subnetworks/management-subnet",
                "source_ip_ranges_to_nat": [
                  "ALL_IP_RANGES"
                ]
              }
            ],
            "tcp_established_idle_timeout_sec": 1200,
            "tcp_time_wait_timeout_sec": 120,
            "tcp_transitory_idle_timeout_sec": 30,
            "udp_idle_timeout_sec": 30
          },
          "dependencies": [
            "google_compute_address.nat",
            "google_compute_network.myvpc",
            "google_compute_router.router",
            "google_compute_subnetwork.management-subnet",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "management-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-21T06:17:19.520-08:00",
            "gateway_address": "10.1.0.1",
            "id": "projects/zahra-project41853/regions/us-central1/subnetworks/management-subnet",
            "ip_cidr_range": "10.1.0.0/18",
            "name": "management-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/networks/myvpc",
            "private_ip_google_access": false,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "zahra-project41853",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/regions/us-central1/subnetworks/management-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.myvpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "google_compute_subnetwork",
      "name": "restricted-subnet",
      "provider": "provider[\"registry.terraform.io/hashicorp/google\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "creation_timestamp": "2023-02-21T06:17:18.999-08:00",
            "gateway_address": "10.0.0.1",
            "id": "projects/zahra-project41853/regions/us-central1/subnetworks/restricted-subnet",
            "ip_cidr_range": "10.0.0.0/18",
            "name": "restricted-subnet",
            "network": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/global/networks/myvpc",
            "private_ip_google_access": true,
            "private_ipv6_google_access": "DISABLE_GOOGLE_ACCESS",
            "project": "zahra-project41853",
            "purpose": "PRIVATE",
            "region": "us-central1",
            "secondary_ip_range": [
              {
                "ip_cidr_range": "10.48.0.0/14",
                "range_name": "pods"
              },
              {
                "ip_cidr_range": "10.52.0.0/20",
                "range_name": "services"
              }
            ],
            "self_link": "https://www.googleapis.com/compute/v1/projects/zahra-project41853/regions/us-central1/subnetworks/restricted-subnet",
            "stack_type": "IPV4_ONLY"
          },
          "dependencies": [
            "google_compute_network.myvpc",
            "google_project_service.compute",
            "google_project_service.container"
          ]
        }
      ]
    }
  ]
}